Almost finised version of the presentation, all content is in

--- a/share2/dzslides/template.html
+++ b/share2/dzslides/template.html
@@ -9,8 +9,24 @@
 <section>
     <!-- This is the first slide -->
     <h3>Decaying Free Software Communities vs. Emerging Hackerspaces</h3>
-    <footer>by Igor Stamatovski &amp; Tamara Atanasoska</footer>
+    <footer><img style="float:center" src="../images/garland_2s.mk_logo_0.png">&nbsp;<img style="float:center" src="../images/Kika-logo-white-malo.jpg"> by Igor Stamatovski &amp; Tamara Atanasoska</footer>
   <details></details>
+</section>
+
+<section>
+    <h2>I Past</h2>
+</section>
+<section>
+    <h2>II Present</h2>
+</section>
+<section>
+    <h2>III Future</h2>
+</section>
+
+<section>
+<blockquote>
+	Conclusion
+</blockquote>
 </section>
 
 <section>
@@ -21,23 +37,12 @@
   <blockquote>
     0.Young rebels with a noble cause
   </blockquote>
-</section>
-
-<section>
-<p>Group of hackers in our late teens and early twenties, defending a righteous
-	cause in Macedonia, to promote free software</p>
-    <footer></footer>
-    <details>
-    <ul>
-      <li> We were a group of hackers in our late teens and early twenties, decided to defent a righteous
-	  cause in Macedonia. </li>
+<details>
+<ul>
       <li> To promote free software, an unknown public good, in the region were piracy reigned and Microsoft, Adobe, Corel, were reguriting people 
-	      by the dosens. </li>
-	  <li>  People were starting companies based on "free" pirated Microsoft software. </li>
-	  <li> A new economy was being born in republics of the former yugoslavia. </li>
-	  <li> We felt that it was a tricky proposal, and we wanted our voice to be heard.</li>
-      </ul>
-  </details>
+	      by the dosens.
+</ul>
+</details>
 </section>
 
 <section>
@@ -49,6 +54,20 @@
 </section>
 
 <section>
+<p>Group of hackers in our late teens and early twenties, defending a righteous
+	cause in Macedonia, to promote free software</p>
+    <footer></footer>
+    <details>
+    <ul>
+	  <li>  People were starting companies based on "free" pirated Microsoft software. </li>
+	  <li> A new economy was being born in republics of the former yugoslavia. </li>
+	  <li> We felt that investing in the proprietary software model was a tricky proposal, and we wanted our voice to be heard that we knew about something better.</li>
+	  <li> Someting new, something radical</li>
+      </ul>
+  </details>
+</section>
+
+<section>
   <blockquote>
    1.Promoting free software, free culture and open standards
   </blockquote>
@@ -56,12 +75,12 @@
 
 <section>
 	<h3>To promote free software in our society </h3>
-	We went grass roots and setup a ngo organisation whos mission is to 
+	We went grass roots and setup a ngo organisation with a mission to
       <ul class="incremental">
-	<li>Explore the technical and technological 
+	<li>Explore the technical and technological aspects
 	<li>social and economical effects of free software on our society.
 	</ul>
-    <footer><img src="../images/kika-logo-white.jpg"></footer>
+    <footer></footer>
     <details>
     <ul>
       <li>We had a website, we had mailing list(s), an rss agregator, we setup
@@ -73,19 +92,20 @@
 </section>
 
 <section>
-  <h3>We accepted the  "hacker ethics" the MIT of the late 70s of the 20th century</h3>
+  <h3>We admired the "hacker ethics" of the late 70's at MIT </h3>
   <ul class="incremental">
     <li>Sharing
     <li>Openness
     <li>Decentralization
-    <li>Free access to computers
-    <li> -World- (Let's be modest) Community Improvement :)
     <li> Community and colaboration
   </ul>
 </section>
+<details>
+Their values about:
+</details>
 <section>
   <blockquote>
-   2. Couple of hacks &amp; failures, we actually did a couple of hacks our selves.
+   2. Couple of hacks 
   </blockquote>
 </section>
 
@@ -96,9 +116,15 @@
     </figure>
     <details>
 	<ul>
-	<li>We organized several localization marathons, we localized the complete desktop stack in Macedonian, OpenOffice, Mozilla, KDE, GNOME, etc.
+	<li>We wanted to show ordinary people and users the benefits of freesoftware. And whait is the greatest benefit of them all to someone who doesn't
+		understand software nor english. Well localization. You can translate it into your own language and you can use them in your own language.
+		Hell the goverment had to pay microsoft 4 milion euros for that. We did it 2 years before, to show that it can be done, and to teach the people 
+		the benefit of free software.
       </details>
 </section>
+  <section>
+    <h3> L10n everything <h3> 
+  </section>
 <section>
     <figure> 
       <img src="../images/img_9616.jpg">
@@ -106,9 +132,21 @@
     </figure>
     <details>
 	<ul>
-	<li>We organized several localization marathons, we localized the complete desktop stack in Macedonian, OpenOffice, Mozilla, KDE, GNOME, etc.
+	<li>We localized the complete desktop stack in Macedonian, OpenOffice, Mozilla, KDE, GNOME, etc.
       </details>
 </section>
+
+<section>
+      <figure> 
+      <img src="../images/odgovor_04-02-2004.png">
+      <figcaption>We fought the goverment before they signed the agreement with microsoft</figcaption>
+    </figure>
+    <details>
+	<ul>
+	<li>We published letters, we got support from John Hall from Linux International
+      </details>
+</section>
+
 <section>
     <figure> 
       <img src="../images/001dscf0477.jpg">
@@ -116,17 +154,8 @@
     </figure>
     <details>
 	<ul>
-	<li>We organized the "Free software flood", on the Microsoft Vizija conference in Skopje, were we handout GNU/Linux CDs to participants  iin front of the conference venue.
-      </details>
-</section>
-<section>
-    <figure> 
-      <img src="../images/2004_02-flood.jpg">
-      <figcaption>Free software flood in 2004 / 2 </figcaption>
-    </figure>
-    <details>
-	<ul>
-	<li>We organized the "Free software flood", on the Microsoft Vizija conference in Skopje, were we handout GNU/Linux CDs to participants  iin front of the conference venue.
+	<li>We organized the "Free software flood", on the Microsoft Vizija conference in Skopje, 
+	  were we handout GNU/Linux CDs to participants  iin front of the conference venue.
       </details>
 </section>
 
@@ -137,8 +166,142 @@
     </figure>
     <details>
 	<ul>
-	<li>We gave lectures to university students
+	<li>When they signed we hacked them on their own playing field, 
+	<li> Saying It is already legal
+	<li>There were not many of us, but we were determined and we were smart :)
       </details>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/p1000190.jpg">
+      <figcaption>Lecture to students of journalism from 2003 till 2009 </figcaption>
+    </figure>
+    <details>
+	<ul>
+	<li>We gave lectures to university students at the faculty of law at the section for journalism
+      </details>
+</section>
+<section>
+    <figure> 
+      <img src="../images/2115407192_529cfb9b46_b.jpg">
+      <figcaption>We hacked OLPC for UNDP</figcaption>
+    </figure>
+    <details>
+	<ul>
+	<li>so their pilot in Macedonia can suceed.
+      </details>
+</section>
+<section>
+    <figure> 
+      <img src="../images/2115407194_e0451b194c_b.jpg">
+      <figcaption>We were having a hell of a great time</figcaption>
+    </figure>
+    <details>
+	<ul>
+	<li> It shows right :)
+      </details>
+</section>
+<section>
+<h3>We were trying to build a reputation at home and abroad</h3>    
+<ul>
+	<li>We organised workshops for UNDP Albania
+	<li>We implemented a project about FLOSS in local selfgovernent in MK
+</li>
+    <details>
+	<ul>
+	<li>We organised workshops for UNDP Albania
+	<li>We implemented a project about FLOSS in local selfgovernent in MK
+</li>
+      </details>
+</section>
+
+<section>
+  <blockquote>
+   2. Three main failures
+  </blockquote>
+</section>
+
+<section>
+    <h2>1. Funding </h2>
+</section>
+
+<section>
+  <blockquote>
+	No matter where we applied, we got a big “No”. The usual donors, were not interested in us.
+  </blockquote>
+<details>
+Nevertheless, the organizations was rarely without any money to fund some of its activities. 
+This was mostly due to our participation on other projects (such as UNDP led ones), 
+where some of the members got honorarium for their work, which they later donated for the general activities of the organization. 
+</details>
+</section>
+
+<section>
+    <h2>2. Representation</h2>
+</section>
+<section>
+  <blockquote>
+	  Who or what is Free Software Macedonia, and what do we do?
+	  We never were under any "umbrella". For bad or for worse.
+  </blockquote>
+<details>
+Sometimes the ignorance goes even further. 
+On one predominantly free software project led by a foreign agency, 
+we were asked how can we possibly help with their project. 
+Of course the obvious overlap of the name of the organization and the free software project 
+was not enough to make the connection that it could be useful if FSM got involved. 
+They actually screwed up localization, we warned and they did not listen. Now nobody cares about localization any more.
+</details>
+</section>
+
+<section>
+    <h2>3. Shrinking of the community</h2>
+</section>
+
+<section>
+  <blockquote>
+  New people rarely join and many of the activists have just moved on.  </blockquote>
+</blockquote>
+<details>
+This is especially interesting because the usage of GNU/Linux and free software in general has grown. 
+The users however don't seem to bother with any of the issues surrounding the community. 
+</details>
+</section>
+
+<section>
+    <h2>Something had to be done</h2>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/324609678.jpg">
+      <figcaption>Back to the drawing board </figcaption>
+    </figure>
+    <details>
+    </details>
+</section>
+
+<section>
+  <blockquote>4.Reboot</blockquote>
+</blockquote>
+<details>
+* We took the risk and in 2009, in early september, I made a call for
+	* participation and people pledged money for rent we were going to
+	* fund a hacklab. Finally.
+</details>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/5654341709_80049c132b_b.jpg">
+      <figcaption>Welcome to KIKA</figcaption>
+    </figure>
+    <details>
+Information
+Kulture
+Autonomy
+    </details>
 </section>
 
 <section>
@@ -146,12 +309,152 @@
 </section>
 
 <section>
+  <blockquote>5.Hacker culture and free software</blockquote>
+</blockquote>
+<details>
+</details>
+</section>
+
+<section>
+    <h3>The hacker ethics were</h3>
+  <ul class="incremental">
+    <li>Sharing
+    <li>Openness
+    <li>Decentralization
+    <li> Community and colaboration
+  </ul>
+<details>
+It seems that these are the actual values that we from the free software
+community shared, so all of a sudden we felt like we knew what we were doing.
+We were there once before, in the past, when we build our free software
+community. Now we had to be a little bit broader, to attract people intrested in
+technology and to promote the hacker etics.
+</details>
+</section>
+
+<section>
+  <blockquote>6. We rebuild NARODNA TEHNIKA</blockquote>
+</blockquote>
+<details>
+In an half empty, half ruined, building from 1949 in the former
+premises of the geological institute we found refuge.
+Together with a group of artist we shared rent, it was like Berlin
+in the 1990s, a semi like squat, a fully run community space.
+</details>
+</section>
+
+<section>
+  <blockquote> KIKA 1.0 had to close after 1.5 years in late 2011</blockquote>
+<details>    The artists made a 1000 eur bill for electricity, that didn';t stop us, we build a paralel power grid ,but then the building got condemned and 
+gov institutions will be build on the premises</details>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/DSCF1558.JPG">
+      <figcaption>GNOME Women outreach 2010</figcaption>
+    </figure>
+    <details>    </details>
+</section>
+
+<section>
+  <h2>It was a success!</h2>
+<details>
+People for paying rent and membership fees, we were independant
+It proved it could be done
+The community started growing again
+</details>
+<details> 
+</details>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/led-kocka.jpg">
+      <figcaption>Wow!</figcaption>
+    </figure>
+    <details>
+We actually rebuild the computer section of the popular Narodna Tehnika in
+former yugoslavia. Right at the moment when the actual Nardona Tehnika
+building, and infrastructure got sold and a university for toursim and
+business evicted the previous space.
+    </details>
+</section>
+
+<section>
+  <h3>7.Activities</h3>
+<img src="../images/Kika-logo-white.jpg">
+<ul class="incremental">
+<li>Gnu/Linux/Android first aid
+<li>Programmming languages
+<li>Knowledge sharing Сподели Знаење
+<li>GNOME Women Outreach
+</ul>
+<footer></footer>
+<details>
+</details>
+</section>
+
+<section>
+  <h3>7.Activities</h3>
+<img src="../images/Kika-logo-white.jpg">
+<ul class="incremental">
+<li>GSOC (Google Summer of Code)
+<li>Hardware hacking We build the led cube.
+<li>Small but manu different infrastructure project for the hacklab itself
+<li>A weekly radio show for on Kanal 103, Macedonian Radio
+</ul>
+<footer></footer>
+<details>
+</details>
+</section>
+
+
+<section>
     <h2>III Future</h2>
+</section>
+<section>
+<h3>TODOs</h3>
+<ul>
+<li>Funding is stable, but get aditional funding for hardware projects, infrastructure and travel
+<li>Expand cooperation with HKLBGD and MAMA in Zagreb
+<li>Hackers in residence exchange programme
+<li>World domination
+</ul>
+<details>
+</details>
 </section>
 
 <section>
     <h2>Conclusion</h2>
 </section>
+
+<section>
+  <h3>Write to us!</h3>
+<img src="../images/kika-crno-horizontalno-malo.jpg">
+<p>igor@slobodensoftver.org.mk </p>
+<p>tamara@slobodensoftver.org.mk</p>
+<details>
+A small group of people, made a change when they started Free Software Macedonia 10 years ago
+A community was created to help that small group of people so we can grow and expand, but still share our ideas and values
+
+That community decayed over time, but with the help of a small group of 
+people that shared the original ideas and hacker ethichs managed to emerge as the founding force behind the KIKA hacklab in Skopje.
+</details>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/2002-01-start.jpg">
+      <figcaption-bottom>Thank you and see you in Skopje @ KIKA</figcaption-bottom>
+    </figure>
+<details>
+But lets see what the future holds for everyone.
+There are many ideas and visions of what KIKA should be, and how it should look like but let's leave that for the future. 
+</details>
+</section>
+
+
 
 <!--
 <section>
@@ -250,6 +553,13 @@
   figcaption {
     margin: 70px;
     font-size: 50px;
+float:right;
+  }
+
+figcaption-bottom {
+    margin: 100x;
+    font-size: 50px;
+    float:right;
   }
 
   footer {
