Fixed the activities slide

--- a/share2/dzslides/template.html
+++ b/share2/dzslides/template.html
@@ -383,7 +383,7 @@ business evicted the previous space.
 
 <section>
   <h3>7.Activities</h3>
-<img src="../images/Kika-logo-white.jpg">
+<!-- <img src="../images/Kika-logo-white.jpg"> -->
 <ul class="incremental">
 <li>Gnu/Linux/Android first aid
 <li>Programmming languages
@@ -397,7 +397,7 @@ business evicted the previous space.
 
 <section>
   <h3>7.Activities</h3>
-<img src="../images/Kika-logo-white.jpg">
+<!-- <img src="../images/Kika-logo-white.jpg"> -->
 <ul class="incremental">
 <li>GSOC (Google Summer of Code)
 <li>Hardware hacking We build the led cube.
