Final version before share2

--- a/share2/dzslides/template.html
+++ b/share2/dzslides/template.html
@@ -13,6 +13,7 @@
   <details></details>
 </section>
 
+<!--
 <section>
     <h2>I Past</h2>
 </section>
@@ -28,14 +29,14 @@
 	Conclusion
 </blockquote>
 </section>
-
+-->
 <section>
     <h2>I Past</h2>
 </section>
 
 <section>
   <blockquote>
-    0.Young rebels with a noble cause
+   Young rebels with a noble cause
   </blockquote>
 <details>
 <ul>
@@ -69,13 +70,12 @@
 
 <section>
   <blockquote>
-   1.Promoting free software, free culture and open standards
+   Promoting free software, free culture and open standards
   </blockquote>
 </section>
 
 <section>
-	<h3>To promote free software in our society </h3>
-	We went grass roots and setup a ngo organisation with a mission to
+	<h3>To promote free software in our society, our misson is: </h3>
       <ul class="incremental">
 	<li>Explore the technical and technological aspects
 	<li>social and economical effects of free software on our society.
@@ -83,6 +83,7 @@
     <footer></footer>
     <details>
     <ul>
+      <li>We established a grass roots ngowith a mission to:
       <li>We had a website, we had mailing list(s), an rss agregator, we setup
 	    the infrastructure both technical, organisational and legal.
       <li>A community was being born, from people who shared the idea that free software was "The right thing to do."
@@ -97,16 +98,24 @@
     <li>Sharing
     <li>Openness
     <li>Decentralization
-    <li> Community and colaboration
+    <li>Community and colaboration
   </ul>
 </section>
 <details>
 Their values about:
 </details>
+
 <section>
   <blockquote>
-   2. Couple of hacks 
+   Couple of hacks 
   </blockquote>
+</section>
+
+<section>
+<figure> 
+      <img src="../images/3oyui0.jpg">
+      <figcaption></figcaption>
+    </figure>
 </section>
 
 <section>
@@ -122,9 +131,6 @@ Their values about:
 		the benefit of free software.
       </details>
 </section>
-  <section>
-    <h3> L10n everything <h3> 
-  </section>
 <section>
     <figure> 
       <img src="../images/img_9616.jpg">
@@ -143,7 +149,7 @@ Their values about:
     </figure>
     <details>
 	<ul>
-	<li>We published letters, we got support from John Hall from Linux International
+	<li>We published letters, we got support from John Hall at Linux International
       </details>
 </section>
 
@@ -154,8 +160,8 @@ Their values about:
     </figure>
     <details>
 	<ul>
-	<li>We organized the "Free software flood", on the Microsoft Vizija conference in Skopje, 
-	  were we handout GNU/Linux CDs to participants  iin front of the conference venue.
+	<li>When they ignorred us and signed the agreement we organized the "Free software flood", on the Microsoft Vizija conference in Skopje, 
+	  were we handout GNU/Linux CDs to participantsin front of the conference venue.
       </details>
 </section>
 
@@ -174,12 +180,13 @@ Their values about:
 
 <section>
     <figure> 
-      <img src="../images/p1000190.jpg">
-      <figcaption>Lecture to students of journalism from 2003 till 2009 </figcaption>
+      <!--<img src="../images/p1000190.jpg">-->
+      <img src="../images/DSC_2440.jpg">
+      <figcaption>We gave lectures..  </figcaption>
     </figure>
     <details>
 	<ul>
-	<li>We gave lectures to university students at the faculty of law at the section for journalism
+	<li>Lecture to university students about free software and copyright from 2003 and counting....
       </details>
 </section>
 <section>
@@ -202,28 +209,24 @@ Their values about:
 	<li> It shows right :)
       </details>
 </section>
-<section>
-<h3>We were trying to build a reputation at home and abroad</h3>    
-<ul>
-	<li>We organised workshops for UNDP Albania
-	<li>We implemented a project about FLOSS in local selfgovernent in MK
-</li>
+<section>    
+    <figure> 
+      <img src="../images/spodeli_kino_poster.jpg">
+      <figcaption></figcaption>
+    </figure>
     <details>
-	<ul>
-	<li>We organised workshops for UNDP Albania
-	<li>We implemented a project about FLOSS in local selfgovernent in MK
-</li>
+	We promoted free culture works and creative commons, we promoted jamendo, magnatune, free movies and free cultural works
       </details>
 </section>
 
 <section>
   <blockquote>
-   2. Three main failures
+   And our three main failures
   </blockquote>
 </section>
 
 <section>
-    <h2>1. Funding </h2>
+    <h2>* Funding </h2>
 </section>
 
 <section>
@@ -238,7 +241,7 @@ where some of the members got honorarium for their work, which they later donate
 </section>
 
 <section>
-    <h2>2. Representation</h2>
+    <h2>* Representation</h2>
 </section>
 <section>
   <blockquote>
@@ -256,7 +259,7 @@ They actually screwed up localization, we warned and they did not listen. Now no
 </section>
 
 <section>
-    <h2>3. Shrinking of the community</h2>
+    <h2>* Shrinking of the community</h2>
 </section>
 
 <section>
@@ -276,19 +279,12 @@ The users however don't seem to bother with any of the issues surrounding the co
 <section>
     <figure> 
       <img src="../images/324609678.jpg">
-      <figcaption>Back to the drawing board </figcaption>
+      <figcaption>We have to act now!</figcaption>
     </figure>
-    <details>
-    </details>
-</section>
-
-<section>
-  <blockquote>4.Reboot</blockquote>
-</blockquote>
 <details>
-* We took the risk and in 2009, in early september, I made a call for
-	* participation and people pledged money for rent we were going to
-	* fund a hacklab. Finally.
+	* We took the risk and in 2009, in early september, I made a call for
+	participation and people pledged money for rent we were going to fund a hacklab. 
+	* Finally.
 </details>
 </section>
 
@@ -298,9 +294,10 @@ The users however don't seem to bother with any of the issues surrounding the co
       <figcaption>Welcome to KIKA</figcaption>
     </figure>
     <details>
-Information
-Kulture
-Autonomy
+      Information
+      Culture
+      Autonomy
+      An automonus place run by free software activists and hackers. 
     </details>
 </section>
 
@@ -309,7 +306,19 @@ Autonomy
 </section>
 
 <section>
-  <blockquote>5.Hacker culture and free software</blockquote>
+  <blockquote>3 Years, 2 locations and we are just getting started ...</blockquote>
+</blockquote>
+<details>
+  In an half empty, half ruined, building from 1949 in the former
+  premises of the geological institute we found refuge.
+  Together with a group of artist we shared rent, it was maybe like Berlin
+  in the 1990s, a semi like squat, a fully run community space.
+  It was a place outside Skopje Macedonia, inside the city centre. An island of freedom and autonomy.
+</details>
+</section>
+
+<section>
+  <blockquote>Hacker culture and free software</blockquote>
 </blockquote>
 <details>
 </details>
@@ -321,7 +330,7 @@ Autonomy
     <li>Sharing
     <li>Openness
     <li>Decentralization
-    <li> Community and colaboration
+    <li>Community and colaboration
   </ul>
 <details>
 It seems that these are the actual values that we from the free software
@@ -333,18 +342,7 @@ technology and to promote the hacker etics.
 </section>
 
 <section>
-  <blockquote>6. We rebuild NARODNA TEHNIKA</blockquote>
-</blockquote>
-<details>
-In an half empty, half ruined, building from 1949 in the former
-premises of the geological institute we found refuge.
-Together with a group of artist we shared rent, it was like Berlin
-in the 1990s, a semi like squat, a fully run community space.
-</details>
-</section>
-
-<section>
-  <blockquote> KIKA 1.0 had to close after 1.5 years in late 2011</blockquote>
+  <blockquote>KIKA 1.0 had to close after 1.5 years in late 2011</blockquote>
 <details>    The artists made a 1000 eur bill for electricity, that didn';t stop us, we build a paralel power grid ,but then the building got condemned and 
 gov institutions will be build on the premises</details>
 </section>
@@ -358,7 +356,7 @@ gov institutions will be build on the premises</details>
 </section>
 
 <section>
-  <h2>It was a success!</h2>
+  <h2>And yet it was still a success!</h2>
 <details>
 People for paying rent and membership fees, we were independant
 It proved it could be done
@@ -382,12 +380,12 @@ business evicted the previous space.
 </section>
 
 <section>
-  <h3>7.Activities</h3>
+  <h3>Activities</h3>
 <!-- <img src="../images/Kika-logo-white.jpg"> -->
 <ul class="incremental">
 <li>Gnu/Linux/Android first aid
 <li>Programmming languages
-<li>Knowledge sharing Сподели Знаење
+<li>Сподели Знаење
 <li>GNOME Women Outreach
 </ul>
 <footer></footer>
@@ -400,9 +398,8 @@ business evicted the previous space.
 <!-- <img src="../images/Kika-logo-white.jpg"> -->
 <ul class="incremental">
 <li>GSOC (Google Summer of Code)
-<li>Hardware hacking We build the led cube.
-<li>Small but manu different infrastructure project for the hacklab itself
-<li>A weekly radio show for on Kanal 103, Macedonian Radio
+<li>Hardware hacking
+<li>Food hacking 
 </ul>
 <footer></footer>
 <details>
@@ -413,27 +410,23 @@ business evicted the previous space.
 <section>
     <h2>III Future</h2>
 </section>
-<section>
-<h3>TODOs</h3>
-<ul>
-<li>Funding is stable, but get aditional funding for hardware projects, infrastructure and travel
-<li>Expand cooperation with HKLBGD and MAMA in Zagreb
-<li>Hackers in residence exchange programme
-<li>World domination
-</ul>
-<details>
-</details>
-</section>
 
 <section>
-    <h2>Conclusion</h2>
+    <figure> 
+      <img src="../images/gsoc-2012.jpg">
+      <figcaption>GSOC 2012</figcaption>
+    </figure>
+    <details>
+Explain the personal experience of how did that go
+    </details>
 </section>
 
+
 <section>
-  <h3>Write to us!</h3>
-<img src="../images/kika-crno-horizontalno-malo.jpg">
-<p>igor@slobodensoftver.org.mk </p>
-<p>tamara@slobodensoftver.org.mk</p>
+  <blockquote>
+    Conclusions
+  </blockquote>
+</section>
 <details>
 A small group of people, made a change when they started Free Software Macedonia 10 years ago
 A community was created to help that small group of people so we can grow and expand, but still share our ideas and values
@@ -441,6 +434,77 @@ A community was created to help that small group of people so we can grow and ex
 That community decayed over time, but with the help of a small group of 
 people that shared the original ideas and hacker ethichs managed to emerge as the founding force behind the KIKA hacklab in Skopje.
 </details>
+</section>
+
+<section>
+    <blockquote>
+	Building a hacklab is hard
+  </blockquote>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/GIL_2045.JPG">
+      <figcaption>or not?</figcaption>
+    </figure>
+</section>
+
+<section>
+    <h2>You need dedication</h2>
+</section>
+
+<section>
+    <h2>You need continuity</h2>
+</section>
+
+<section>
+    <h2>All exuses are invalid</h2>
+</section>
+
+<section>
+    <h2>Attract other communities</h2>
+<details>
+Wikipedia, other programming user groups, Drupal. wordpress it seems that there is interset but we don't know how to handle it at this moment
+</details>
+</section>
+
+<section>
+    <h2>Getting new people involved steadilly over time</h2>
+<details>
+  Then next generation, should replace the next, and the next, gsoc seem like a goot alternative where new generation of students come and go
+</details>
+</section>
+
+<section>
+    <h2>Regional cooperation through NSND helped a lot</h2>
+<details>
+  Expand cooperation with HKLBGD and MAMA in Zagreb
+</details>
+</section>
+
+<section>
+    <h2>International cooperation through with CCC helped</h2>
+<details>
+  The CCC congress is a must, to get experience and to just see how things are done on
+a whole new level
+</details>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/5654341691_0b9f1c9e30_b.jpg">
+      <figcaption>World domination</figcaption>
+    </figure>
+    <details>World domination
+    </details>
+</section>
+
+
+<section>
+  <h3>You are all invited to colaborate with us!</h3>
+<img src="../images/kika-crno-horizontalno-malo.jpg">
+<p>info@slobodensoftver.org.mk</p>
+<p>blog.spodeli.org</p>
 </section>
 
 <section>
@@ -453,8 +517,6 @@ But lets see what the future holds for everyone.
 There are many ideas and visions of what KIKA should be, and how it should look like but let's leave that for the future. 
 </details>
 </section>
-
-
 
 <!--
 <section>
