Fix to the fgcaption to have opacity and a white background

--- a/share2/dzslides/template.html
+++ b/share2/dzslides/template.html
@@ -352,7 +352,7 @@ gov institutions will be build on the premises</details>
       <img src="../images/DSCF1558.JPG">
       <figcaption>GNOME Women outreach 2010</figcaption>
     </figure>
-    <details>    </details>
+    <details>GNOME Women outreach 2010</details>
 </section>
 
 <section>
@@ -510,7 +510,7 @@ a whole new level
 <section>
     <figure> 
       <img src="../images/2002-01-start.jpg">
-      <figcaption-bottom>Thank you and see you in Skopje @ KIKA</figcaption-bottom>
+      <figcaption>10x and see you in Skopje @ KIKA</figcaption>
     </figure>
 <details>
 But lets see what the future holds for everyone.
@@ -615,7 +615,9 @@ There are many ideas and visions of what KIKA should be, and how it should look 
   figcaption {
     margin: 70px;
     font-size: 50px;
-float:right;
+    float:right;
+    background-color:white;
+    opacity:0.4;
   }
 
 figcaption-bottom {
