Final presentation with Tamaras suggestions and comments

--- a/share2/dzslides/template.html
+++ b/share2/dzslides/template.html
@@ -49,7 +49,7 @@
 <section>
     <figure> 
       <img src="../images/fs-community.jpg">
-      <figcaption>An image</figcaption>
+      <figcaption>The birth of a community...</figcaption>
     </figure>
     <details>Comments </details>
 </section>
@@ -60,7 +60,7 @@
     <footer></footer>
     <details>
     <ul>
-	  <li>  People were starting companies based on "free" pirated Microsoft software. </li>
+	  <li> People were starting companies based on "free" pirated Microsoft software. </li>
 	  <li> A new economy was being born in republics of the former yugoslavia. </li>
 	  <li> We felt that investing in the proprietary software model was a tricky proposal, and we wanted our voice to be heard that we knew about something better.</li>
 	  <li> Someting new, something radical</li>
@@ -93,7 +93,7 @@
 </section>
 
 <section>
-  <h3>We admired the "hacker ethics" of the late 70's at MIT </h3>
+  <h3>We admired the "hacker ethics" at MIT, RMS and the rest </h3>
   <ul class="incremental">
     <li>Sharing
     <li>Openness
@@ -279,7 +279,7 @@ The users however don't seem to bother with any of the issues surrounding the co
 <section>
     <figure> 
       <img src="../images/324609678.jpg">
-      <figcaption>We have to act now!</figcaption>
+      <figcaption>We had to act immediatelly!</figcaption>
     </figure>
 <details>
 	* We took the risk and in 2009, in early september, I made a call for
@@ -350,9 +350,9 @@ gov institutions will be build on the premises</details>
 <section>
     <figure> 
       <img src="../images/DSCF1558.JPG">
-      <figcaption>GNOME Women outreach 2010</figcaption>
+      <figcaption>GNOME Women outreach 2011</figcaption>
     </figure>
-    <details>GNOME Women outreach 2010</details>
+    <details>GNOME Women outreach 2011</details>
 </section>
 
 <section>
@@ -394,7 +394,16 @@ business evicted the previous space.
 </section>
 
 <section>
-  <h3>7.Activities</h3>
+    <figure> 
+      <img src="../images/finki_gsoc.jpg">
+      <figcaption>Faculty GSOC presentation</figcaption>
+    </figure>
+    <details>
+    </details>
+</section>
+
+<section>
+  <h3>Activities</h3>
 <!-- <img src="../images/Kika-logo-white.jpg"> -->
 <ul class="incremental">
 <li>GSOC (Google Summer of Code)
@@ -409,6 +418,15 @@ business evicted the previous space.
 
 <section>
     <h2>III Future</h2>
+</section>
+
+<section>
+    <figure> 
+      <img src="../images/gsoc_follow_up_kika.jpg">
+      <figcaption>KIKA GSOC startup session</figcaption>
+    </figure>
+    <details>
+    </details>
 </section>
 
 <section>
@@ -476,6 +494,16 @@ Wikipedia, other programming user groups, Drupal. wordpress it seems that there 
 </section>
 
 <section>
+    <figure> 
+      <img src="../images/6075485905_c7beb80abf_b.jpg">
+      <figcaption>NSND Split</figcaption>
+    </figure>
+    <details>
+		  NSND Split
+    </details>
+</section>
+
+<section>
     <h2>Regional cooperation through NSND helped a lot</h2>
 <details>
   Expand cooperation with HKLBGD and MAMA in Zagreb
@@ -483,7 +511,17 @@ Wikipedia, other programming user groups, Drupal. wordpress it seems that there 
 </section>
 
 <section>
-    <h2>International cooperation through with CCC helped</h2>
+    <figure> 
+      <img src="../images/5654896254_00c932617b_b.jpg">
+      <figcaption>CCC Berlin</figcaption>
+    </figure>
+    <details>
+		  CCC Berlin
+    </details>
+</section>
+
+<section>
+    <h2>International cooperation with CCC helped</h2>
 <details>
   The CCC congress is a must, to get experience and to just see how things are done on
 a whole new level
