Add new resouces

--- a/infromatijada-2014/2.OpenData.html
+++ b/infromatijada-2014/2.OpenData.html
@@ -60,26 +60,50 @@
             <section id="firstSection">
                 <h3>What is open data?</h3>
                 <ul>
-                    <li>http://opendata.gov.mk/</li>
-                    <li>Отворени податоци се податоците кои ги создаваат органите и институциите од јавниот сектор во остварувањето на своите надлежности, а кои се јавно објавени со цел да се овозможи нивно  користење од страна на правни или физички лица за создавање нови информации, содржини, апликации или услуги.</li>
-					<li>li1</li>
+                    <li>Open data is created and shared mainly by the public institutions</li>
+					<li>Health, education, finance, economics, cadaster</li>
+					<li>Open data is data that can be freely used, reused and redistributed by anyone - subject only, at most, to the requirement to attribute and share alike</li>
+					<li>Data is one of the most valuable assets for the companies</li>
+					<li>Business processes that can benefit from open data?</li>
                 </ul>
             </section>
 			
-			<section id="secondSection">
+			<section id="howSection">
 				<section>
-					<h3>TITLE</h3>
+					<h3>How to use open data</h3>
 					<ul>
-						<li>li1</li>
-						<li>li1</li>
-						<li>li1</li>
+						<li>Why SOA is the right architecture?</li>
+						<li>Open data APIs</li>
+						<li>Data integrity, accuracy, meaning, value...</li>
+						<li>Building your own API</li>
+						<li>Proxy?</li>
 					</ul>
 				</section>
 				<section>
-					<h3>TITLE</h3>
-					<img src="images/LogoTransparent.jpg" />
+					<h3>System architecture</h3>
+					<img src="images/Backend/SystemOverview.png" />
 				</section>
             </section>
+			
+			<section id="examplesSection">
+				<h3>Examples</h3>
+				<ul>
+					<li><a href="http://opendata.gov.mk/" target="_blank">opendata.gov.mk</a></li>
+					<li><a href="https://www.data.gov/developers/apis" target="_blank">US data.gov</a></li>
+					<li><a href="http://www.google.com/publicdata/directory" target="_blank">google public data</a></li>
+				</ul>
+            </section>
+			
+			<section>
+				<h3>Goals</h3>
+				<ul>
+					<li>Easy to implement in existing systems</li>
+					<li>Easy to configure and maintain</li>
+					<li>Performance is important</li>
+					<li>Access, process and use the public open data in real scenarios</li>
+					<li>The use of open data should save resources, improve data quality and create new business perspectives</li>
+				</ul>
+			</section>
 
             <section id="closingSection">
                 <h2>THANK YOU!</h2>
